CX-8495 : Fixed dark mode colours for variant white buttons (#1272)

--- a/web-components/src/components/button/scss/button.scss
+++ b/web-components/src/components/button/scss/button.scss
@@ -693,20 +693,20 @@
 }
 
 :host([variant="white"]) .md-button {
-  @include button-color(
-    $color: $md-black-100,
-    $bg: $button--white__background-color,
-    $bg-hover: $button--white__background-color--hover,
-    $bg-active: $button--white__background-color--active
-  );
+  background-color: var(--button-white-bg-color, $lm-button-white-bg-color-light);
+  color: var(--button-white-text-color, $lm-button-white-text-color-light);
+  
+  &:hover {
+    background-color: var(--button-white-hover-bg-color, $lm-button-white-hover-bg-color-light);
+  }
+
+  &:active {
+    background-color: var(--button-white-pressed-bg-color, $lm-button-white-pressed-bg-color-light);
+  }
 
   &--outline {
     box-shadow: 0 0 0 1px var(--button-white-outline-color, $lm-button-white-outline-color-light);
     color: var(--button-white-outline-text-color, $lm-button-white-outline-text-color-light);
-
-    &:hover {
-      box-shadow: none !important;
-    }
   }
 }
 
